--- a/src/App.css
+++ b/src/App.css
@@ -10,15 +10,23 @@
   font-weight: bold;
 }
 
-
+.description, .result-text {
+  color: rgb(44 121 194);
+  text-shadow:  1px 2px 8px rgb(16, 15, 15);
+  font-size: 1.2rem;
+  font-variant: small-caps;
+  font-weight:bold;
+}
 
 .container {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 input {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  border: none;
-  color: rgb(44 121 194)
+  border: none!important;
+  color: rgb(44 121 194)!important;
+  background-color: rgb(34, 33, 33)!important;
+
 }
 input:focus {
   outline: none;
@@ -26,6 +34,9 @@ input:focus {
 .btn:focus, .btn:active:focus, .btn.active:focus{
   outline: none!important;
   box-shadow: none!important;
+}
+.btn {
+  background-color: #2c79c2!important;
 }
 
 
@@ -35,4 +46,103 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+.test1 {
+  color: rgb(44 121 194);
+}
+img {
+  border: 30px double rgb(44 121 194);
+}
 
+.div {
+  display: flex;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+  width: 500px;
+  height: 600px;
+  margin: auto;
+  background-color: #21d4fd;
+  background-image: linear-gradient(19deg, #21d4fd 0%, #b721ff 100%);
+  border-radius: 30% 70% 70% 30%/30% 30% 70% 70%;
+  box-shadow: 15px 15px 50px rgba(0,0,0,0.2);
+  animation: morphing 10s infinite;
+  overflow: hidden;
+}
+.div:hover {
+  animation-play-state: paused;
+}
+
+@-moz-keyframes morphing {
+  0% {
+    border-radius: 30% 70% 70% 30%/30% 30% 70% 70%;
+    box-shadow: 15px 15px 50px rgba(0,0,0,0.2);
+  }
+  25% {
+    border-radius: 58% 42% 75% 25%/76% 46% 54% 24%;
+  }
+  50% {
+    border-radius: 50% 50% 33% 67%/55% 27% 73% 45%;
+    box-shadow: -10px -5px 50px rgba(0,0,0,0.2);
+  }
+  75% {
+    border-radius: 33% 67% 58% 42%/63% 68% 32% 37%;
+  }
+}
+@-webkit-keyframes morphing {
+  0% {
+    border-radius: 30% 70% 70% 30%/30% 30% 70% 70%;
+    box-shadow: 15px 15px 50px rgba(0,0,0,0.2);
+  }
+  25% {
+    border-radius: 58% 42% 75% 25%/76% 46% 54% 24%;
+  }
+  50% {
+    border-radius: 50% 50% 33% 67%/55% 27% 73% 45%;
+    box-shadow: -10px -5px 50px rgba(0,0,0,0.2);
+  }
+  75% {
+    border-radius: 33% 67% 58% 42%/63% 68% 32% 37%;
+  }
+}
+@-o-keyframes morphing {
+  0% {
+    border-radius: 30% 70% 70% 30%/30% 30% 70% 70%;
+    box-shadow: 15px 15px 50px rgba(0,0,0,0.2);
+  }
+  25% {
+    border-radius: 58% 42% 75% 25%/76% 46% 54% 24%;
+  }
+  50% {
+    border-radius: 50% 50% 33% 67%/55% 27% 73% 45%;
+    box-shadow: -10px -5px 50px rgba(0,0,0,0.2);
+  }
+  75% {
+    border-radius: 33% 67% 58% 42%/63% 68% 32% 37%;
+  }
+}
+@keyframes morphing {
+  0% {
+    border-radius: 30% 70% 70% 30%/30% 30% 70% 70%;
+    box-shadow: 15px 15px 50px rgba(0,0,0,0.2);
+  }
+  25% {
+    border-radius: 58% 42% 75% 25%/76% 46% 54% 24%;
+  }
+  50% {
+    border-radius: 50% 50% 33% 67%/55% 27% 73% 45%;
+    box-shadow: -10px -5px 50px rgba(0,0,0,0.2);
+  }
+  75% {
+    border-radius: 33% 67% 58% 42%/63% 68% 32% 37%;
+  }
+}
+
+p {
+  animation: color-change 8s infinite;
+}
+
+@keyframes color-change {
+  0% { color: #934dff; }
+  20% { color: #2c79c2; }
+  100% { color: #934dff; }
+}
